syntax = "proto3";

option go_package = "proto";

service Signaling {
  rpc ReceiveSignalingOffer(ReceiveSignalingOfferRequest) returns (ReceiveSignalingOfferResponse) {}
  rpc SendSignalingAnswer(SendSignalingAnswerRequest) returns (SendSignalingAnswerResponse) {}
  rpc TrickleSignaling(stream TrickleSignalingRequest) returns (stream TrickleSignalingResponse) {}
}

message ReceiveSignalingOfferRequest {
  string session_id = 1;
}

message ReceiveSignalingOfferResponse {
  bool found = 1;
  SignalingOffer offer = 2;
}

message SendSignalingAnswerRequest {
  string session_id = 1;
  SignalingAnswer signaling_answer = 2;
}

message SendSignalingAnswerResponse {
}

message SignalingOffer {
  string body =  1;
}

message SignalingAnswer {
  string body = 1;
}

message TrickleSignalingRequest {
  string session_id = 1;
  ICECandidate candidate = 2;
}

message TrickleSignalingResponse {
  string session_id = 1;
  ICECandidate candidate = 2;
}

message ICECandidate {
  string body = 1;
}
